--- a/Languages/italian.lang
+++ b/Languages/italian.lang
@@ -7,8 +7,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-15 16:02+0200\n"
 "PO-Revision-Date: 2011-09-11 12:19+0100\n"
-"Last-Translator: Zonta85\n"
-"Language-Team: Zonta85 (zonta_85@hotmail.it)\n"
+"Last-Translator: MattiaPell\n"
+"Language-Team: Zonta85 (zonta_85@hotmail.it), MattiaPell\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
